--- a/TestsProd/appsettings.json
+++ b/TestsProd/appsettings.json
@@ -14,7 +14,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "logs/MyAppLog-.txt",
+          "path": "logs/AppLog-.txt",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
